(split)bug: 34540 fix KnownKey warnings
http://bugzilla.zimbra.com/show_bug.cgi?id=34540

Copied from Perforce
 Change: 142778